@@ -2872,3 +2872,5 @@ Added -bj option to rfluxmtx and rxfluxmtx to blur bin boundaries
 by jittering sample directions.  Setting -bj 1 is statistically
 equivalent to linear interpolation of receiver bins, rather than
 the default piecewise constant representation (-bj 0).
+
+Added rtrace -pA option for total radiometric flux output.
